[gd_scene load_steps=4 format=3 uid="uid://dnn6untukcir"]

[ext_resource type="Script" path="res://scenes/coin_flip/coin/arrow_keys_control/flip_delay_timer/flip_delay_timer.gd" id="1_ge6qg"]

[sub_resource type="LabelSettings" id="LabelSettings_8ddpy"]
font_size = 50
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2542h"]
font_size = 40
font_color = Color(0, 0, 0, 1)

[node name="FlipDelayTimer" type="Timer"]
script = ExtResource("1_ge6qg")
metadata/_edit_horizontal_guides_ = [320.0]
metadata/_edit_vertical_guides_ = [576.0]

[node name="TimerLabel" type="Label" parent="."]
offset_left = 512.0
offset_top = 144.0
offset_right = 640.0
offset_bottom = 245.0
text = "time"
label_settings = SubResource("LabelSettings_8ddpy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerTitleLabel" type="Label" parent="."]
offset_left = 472.0
offset_top = 96.0
offset_right = 686.0
offset_bottom = 151.0
theme_override_font_sizes/font_size = 15
text = "Coin flip in:"
label_settings = SubResource("LabelSettings_2542h")
horizontal_alignment = 1
